--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@ layout: default
 title: About
 showpic: true;
 ---
+<h2>Coming Soon!</h2>
 <!--
 <div class="jumbotron content-box">
   <div class="shader"></div>
@@ -17,7 +18,7 @@ showpic: true;
                 I'm a passionate pianist, aloof stargazer, and avid learner of new things - jazz improv and solving a rubik's cube are next on my list!
   </p>
 </div> -->
-
+<!--
 <div class="row-container">
   <div class="about">
     <h1>About Me</h1>
@@ -35,4 +36,4 @@ showpic: true;
   </div>
   <div class="crop">
   </div>
-</div>
+</div> -->
