--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ showpic: true
       <h2>Education</h2>
       <div class="school-entry">
         <h4>University of California, Berkeley</h4>
-        <p class="smalltext">2018 - 2021 (Intended)</p>
+        <p class="smalltext">2018 - 2022</p>
       </div>
-      <p>Bachelor of Science in Electrical Engineering and Computer Science (EECS),  3.64 GPA</p>
+      <p>Bachelor of Science in Electrical Engineering and Computer Science (EECS),  3.7 GPA</p>
       <div class="school-entry">
         <h4>Fraser Heights Secondary, BC, Canada</h4>
         <p class="smalltext">2014 - 2018</p>
