--- a/projects.html
+++ b/projects.html
@@ -3,4 +3,21 @@ layout: default
 title: Projects
 showpic: true
 ---
-<h2>Coming Soon!</h2>
+<h1 class="projects-title">Projects</h1>
+<div class="projects row-container">
+  <div class="project-boxes content-box">
+    <img src="assets/images/code.jpg" alt="" height="400px" class="project-pic">
+    <div class="fader">
+      <h2 class="picturefont">Automated Trading Application</h2>
+    </div>
+  </div>
+  <div class="project-boxes content-box">
+    <img src="assets/images/code2.jpg" alt="" height="400px" class="project-pic">
+    <div class="fader">
+
+    </div>
+  </div>
+  <div class="project-boxes content-box">
+
+  </div>
+</div>
