--- a/about.html
+++ b/about.html
@@ -3,14 +3,13 @@ layout: default
 title: About
 showpic: true
 ---
+<h2>Coming Soon!</h2>
 <!-- Row 1 - ABOUT ME PARAGRAPH-->
+<div style="display: none">
 <div class="row-container">
   <div class="about">
     <h1>About Me</h1>
-    <!-- <div class="ornament"></div> -->
     <div class="paragraph-wrapper">
-      <!-- <div class="decoration1"></div>
-      <div class="decoration2"></div> -->
       <p>I'm a Chinese Canadian born in Beijing, China and grew up in Vancouver, Canada. Currently a sophomore at the
         University of California, Berkeley, I'm majoring in EECS and hope to pursue a minor in Data Science as well. I am also interested in
         business, and would love to start my own company one day. In the meantime, I am mainly looking for opportunities in the tech industry and
@@ -24,8 +23,6 @@ showpic: true
 </div>
 
 <!-- Row 2 - EXTRA CURRICULARS-->
-<!-- <h1>My Hobbies</h1>
-<div class="ornament"></div> -->
 <div class="row-container">
     <div class="picture-box">
       <img src="assets/images/speaking.jpg" class="speaking" alt="speaking" height=200px width=100%>
@@ -66,7 +63,7 @@ showpic: true
   {% endfor %}
   <a href="mailto: jerryjiao@berkeley.edu" style="background-image: url('assets/images/email.png')"></a>
 </div>
-
+</div>
 
 <!-- OLD -->
 <!-- <h2>Coming Soon!</h2> -->
