--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,8 @@ layout: default
 title: Projects
 showpic: true
 ---
+<h2>Coming Soon!</h2>
+<div style="display: none">
 <h1 class="projects-title">Projects</h1>
 <div class="projects row-container">
   <div class="project-boxes content-box">
@@ -20,4 +22,5 @@ showpic: true
   <div class="project-boxes content-box">
 
   </div>
+</div>
 </div>
