--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ showpic: true
   <div class="row-container">
     <div class="description content-box">
       <p>
-        Hey! I'm a sophomore at UC Berkeley with interest in software engineering, product development, and entrepreneurship. In my free time,
+        Hey! I'm a junior at UC Berkeley with interest in software engineering, product development, and entrepreneurship. In my free time,
         I'm a passionate pianist, aloof stargazer, and avid learner of new things - jazz improv and solving a rubik's cube are next on my list!
       </p>
     </div>
